app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require refinery/formatting
 *= require refinery/theme
 *= require_self
 *= require products
 *= require blog
 *= require media_releases
 *= require catalogues
 *= require stockists
 *= require enquiries
 *= require warehouses
 *= require fit_my_4x4
 *= require glasscase/glasscase
 */

@import "bootstrap-config";
@import "bootstrap";

a {
  color: $link-color;
  text-decoration: none;

  &:hover,
  &:focus {
    color: $link-hover-color;
    text-decoration: none;
  }
}

h1, h2, h3, h4, h5, h5 {
  color: $green;
  font-family: $font-family-extra-bold;
  text-transform: uppercase;
}

strong {
  font-family: $font-family-bold;
}

label {
  font-family: $font-family-bold;
}

.navbar-default {
  .navbar-nav {
    > li > a {
      text-transform: uppercase;
    }
  }
}

.tab-content > form > .tab-pane {
  display: none;
}

.tab-content > form > .active {
  display: block;
}

hr.double {
  border-bottom: 1px solid $hr-border;
  height: 5px;
}

.btn.btn-primary, .btn.btn-info {
  text-transform: uppercase;
}

.btn.btn-hidden {
  visibility: hidden;
}

.table.table-noborder {
  td, th {
    border: none;
  }
}

.pagination {
  display: none;
}

.infinite-container.infinite-loading:after {
  content:"Loading more...";
  text-transform: uppercase;
  line-height:30px;
  width: 100%;
  text-align:center;
  color: $green;
  visibility: visible;
  padding-top: 30px;
  margin-top: $grid-gutter-width / 2;
  background: image-url('ajax-loader.gif') no-repeat top white;
}

.col-xs-5ths,
.col-sm-5ths,
.col-md-5ths,
.col-lg-5ths {
  position: relative;
  min-height: 1px;
  padding-right: 10px;
  padding-left: 10px;
}

.col-xs-5ths {
  width: 20%;
  float: left;
}

@media (min-width: 768px) {
.col-sm-5ths {
    width: 20%;
    float: left;
  }
}

@media (min-width: 992px) {
  .col-md-5ths {
    width: 20%;
    float: left;
  }
}

@media (min-width: 1200px) {
  .col-lg-5ths {
    width: 20%;
    float: left;
  }
}

.styled-select {
  display: block;
  vertical-align: bottom;
  overflow: hidden;
  background: image-url('selectmenu-caret.png') no-repeat right white;
  border: 1px solid $dark-grey;

  &.disabled {
    cursor: not-allowed;
    background-color: $input-bg-disabled;
    opacity: 1;
  }

  select {
    display: block;
    background: transparent;
    padding: 0 18px 0 10px;
    line-height: 1;
    border: 0;
    border-radius: 0;
    -webkit-appearance: none;
    -moz-appearance:window;

    &.input-sm {
      height: ($input-height-small - 2);
    }
  }
}

.vehicle-selector, .category-selector {
  &.right {
    .control-label {
      text-align: right;
    }
  }

  @media (max-width: $screen-xs-max) {
    .control-label {
      padding-left: 0;
      padding-right: 0;
    }

    .control {
      margin-bottom: 4px;
      padding-left: 0;
      padding-right: 0;
    }
  }
}

.vehicle-selector {
  .styled-select {
    /* always show these boxes for fit-my-4x4 */
    display: block ! important;

    select {
      display: block ! important;
    }
  }
}

.panel.panel-info {
  background-color: $dark-grey;
  border-color: $dark-grey;
  color: white;
}

.green {
  color: $green;
}

.grey {
  color: $dark-grey;
}

.uppercase {
  text-transform: uppercase;
}

#errorExplanation {
  margin-bottom: $grid-gutter-width/2;
}

.stockists-search {
  &.navbar-form {
    float: right;
    margin-bottom: 10px;

    a.find-store {
      font-size: $font-size-medium;
      color: $dark-grey;
      text-transform: uppercase;

      &:hover {
        text-decoration: underline;
      }

      margin-right: 20px;
      @media (max-width: $screen-xs-max) {
        margin-right: 5px;
      }
    }

    input.form-control {
      @include search-input;

      border-radius: 0;
      border-color: $dark-grey;
      background-color: $white;
      font-size: $font-size-smallish;
    }

    .form-heading {
      font-size: $font-size-medium;
      margin-bottom: $grid-gutter-width/2;
    }

    .btn {
      border-radius: 0;
      background-color: $green;
      border-color: $dark-grey;
      color: $white;
    }
  }



  /* fix alignment issues on mobile */
  .form-group {
    display: inline-block;
    margin-bottom: 0;
    vertical-align: middle;
    margin-top: -8px;
  }

  &.navbar-form {
    .form-control {
      display: inline-block;
      width: auto;
      vertical-align: middle;
    }
  }

  &.navbar-input-group {
    font-size: 0px;

    .btn {
      width: auto;
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
      border-left: 0px;
      margin-top: -8px;
    }
  }
}

/* new class, so submit button in navbar can be grouped with search input */
.navbar-input-group {
  @media (min-width: $screen-sm) {
    font-size: 0px; /*removes whitespace between button and input*/

    input {
      border-top-right-radius: 0px;
      border-bottom-right-radius: 0px;
    }
    .btn {
      border-top-left-radius: 0px;
      border-bottom-left-radius: 0px;
      border-left: 0px;
    }
  }
  @media (max-width: $screen-xs-max) {
    margin-top: 0px;
    margin-bottom: 0px;

    .btn {
      width:100%;
    }
  }
}

#body {
  .inner {
    margin-top: $grid-gutter-width/2;
    margin-bottom: $grid-gutter-width/2;
  }
}
/* ... */

